Workin on Dolla's

--- a/IV Optimize/Statistical Testing Sets/C4 Difference.ipynb
+++ b/IV Optimize/Statistical Testing Sets/C4 Difference.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 10,
       "metadata": {
         "metadata": {}
       },
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 11,
       "metadata": {
         "metadata": {},
         "tags": [],
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 12,
       "metadata": {
         "metadata": {}
       },
@@ -55,15 +55,18 @@
         "# # Concatenate (union) the dataframes\n",
         "# df_All = pd.concat([df_All_1, df_All_2], ignore_index=True)\n",
         "\n",
-        "df_rC4_1_75 = pd.read_csv(r'C:\\Users\\steve\\OneDrive\\1. BAIUTEK\\Project-OptiC4\\IV Optimize\\Statistical Testing Sets\\rC4_1_75.csv')\n",
-        "df_rC4_5_75 = pd.read_csv(r'C:\\Users\\steve\\OneDrive\\1. BAIUTEK\\Project-OptiC4\\IV Optimize\\Statistical Testing Sets\\rC4_5_75.csv')\n",
+        "# df_rC4_1_75 = pd.read_csv(r'C:\\Users\\steve\\OneDrive\\1. BAIUTEK\\Project-OptiC4\\IV Optimize\\Statistical Testing Sets\\rC4_1_75.csv')\n",
+        "# df_rC4_5_75 = pd.read_csv(r'C:\\Users\\steve\\OneDrive\\1. BAIUTEK\\Project-OptiC4\\IV Optimize\\Statistical Testing Sets\\rC4_5_75.csv')\n",
+        "\n",
+        "df_rC4_1_75 = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\IV Optimize\\Statistical Testing Sets\\rC4_1_75.csv')\n",
+        "df_rC4_5_75 = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\IV Optimize\\Statistical Testing Sets\\rC4_5_75.csv')\n",
         "\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 13,
       "metadata": {
         "metadata": {}
       },
@@ -150,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 14,
       "metadata": {
         "metadata": {}
       },
@@ -234,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 15,
       "metadata": {
         "metadata": {}
       },
@@ -245,8 +248,8 @@
         "df_rC4_1_75['Butanol_diff'] = df_rC4_1_75['Butanol'] - df_rC4_1_75['Butanol_adj']\n",
         "df_rC4_1_75['Decanol_diff'] = df_rC4_1_75['Decanol'] - df_rC4_1_75['Decanol_adj']\n",
         "\n",
-        "# *****************************************************************\n",
-        "# df_rC4_1_75['rC4_diff'] = (df_rC4_1_75['FFC55555']*df_rC4_1_75[''])-(df_rC4_1_75['FFC55555_adj']*df_rC4_1_75['']))"
+        "\n",
+        "df_rC4_1_75['rC4_diff'] = (df_rC4_1_75['FFC55555']*df_rC4_1_75['FC55552'])-(df_rC4_1_75['FFC55555_adj']*df_rC4_1_75['FC55552'])"
       ]
     },
     {
@@ -258,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 16,
       "metadata": {
         "metadata": {}
       },
@@ -271,22 +274,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 17,
       "metadata": {
         "metadata": {}
       },
       "outputs": [],
       "source": [
         "# Sum up the hourly data to get daily totals for each component\n",
-        "daily_totals_1_75 = df_rC4_1_75[['FFC55555_diff','Butanol_diff', 'Decanol_diff']].resample('D').sum()\n",
+        "daily_totals_1_75 = df_rC4_1_75[['FFC55555_diff','Butanol_diff', 'Decanol_diff', 'rC4_diff']].resample('D').sum()\n",
         "\n",
         "# Group by year and sum up daily data for each year\n",
-        "daily_totals_by_year_1_75 = df_rC4_1_75[['FFC55555_diff','Butanol_diff', 'Decanol_diff']].groupby(df_rC4_1_75.index.year).resample('D').sum()\n"
+        "daily_totals_by_year_1_75 = df_rC4_1_75[['FFC55555_diff','Butanol_diff', 'Decanol_diff', 'rC4_diff']].groupby(df_rC4_1_75.index.year).resample('D').sum()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 18,
       "metadata": {
         "metadata": {}
       },
@@ -299,42 +302,52 @@
             "  Estimated Annual Production for FFC55555_diff: 11.310000000000011\n",
             "  Estimated Annual Production for Butanol_diff: -972.1568279333324\n",
             "  Estimated Annual Production for Decanol_diff: -193.90538045999924\n",
+            "  Estimated Annual Production for rC4_diff: 378578.3373750003\n",
             "Year 2013:\n",
             "  Estimated Annual Production for FFC55555_diff: 13.170000000000009\n",
             "  Estimated Annual Production for Butanol_diff: -570.8263937000012\n",
             "  Estimated Annual Production for Decanol_diff: -68.90767924999939\n",
+            "  Estimated Annual Production for rC4_diff: 491051.11237500043\n",
             "Year 2014:\n",
             "  Estimated Annual Production for FFC55555_diff: 5.250000000000004\n",
             "  Estimated Annual Production for Butanol_diff: -468.30548340000047\n",
             "  Estimated Annual Production for Decanol_diff: -117.12876973099984\n",
+            "  Estimated Annual Production for rC4_diff: 192716.19787500016\n",
             "Year 2015:\n",
             "  Estimated Annual Production for FFC55555_diff: 10.650000000000006\n",
             "  Estimated Annual Production for Butanol_diff: -72.39918870002506\n",
             "  Estimated Annual Production for Decanol_diff: -160.44445202500137\n",
+            "  Estimated Annual Production for rC4_diff: 377288.3117500003\n",
             "Year 2016:\n",
             "  Estimated Annual Production for FFC55555_diff: 4.080000000000004\n",
             "  Estimated Annual Production for Butanol_diff: -238.10571050000738\n",
             "  Estimated Annual Production for Decanol_diff: -144.3860514400032\n",
+            "  Estimated Annual Production for rC4_diff: 144389.55737500015\n",
             "Year 2017:\n",
             "  Estimated Annual Production for FFC55555_diff: 2.7100000000000026\n",
             "  Estimated Annual Production for Butanol_diff: -354.2747859000098\n",
             "  Estimated Annual Production for Decanol_diff: -156.57033976000255\n",
+            "  Estimated Annual Production for rC4_diff: 96017.18325000007\n",
             "Year 2018:\n",
             "  Estimated Annual Production for FFC55555_diff: 0.17000000000000015\n",
             "  Estimated Annual Production for Butanol_diff: -450.7095081000074\n",
             "  Estimated Annual Production for Decanol_diff: -194.77872093000204\n",
+            "  Estimated Annual Production for rC4_diff: 6000.778000000005\n",
             "Year 2019:\n",
             "  Estimated Annual Production for FFC55555_diff: 4.820000000000003\n",
             "  Estimated Annual Production for Butanol_diff: -1019.4879001499794\n",
             "  Estimated Annual Production for Decanol_diff: -204.87137067000336\n",
+            "  Estimated Annual Production for rC4_diff: 183830.20350000018\n",
             "Year 2020:\n",
             "  Estimated Annual Production for FFC55555_diff: 1.8800000000000017\n",
             "  Estimated Annual Production for Butanol_diff: -299.49815069997703\n",
             "  Estimated Annual Production for Decanol_diff: -102.23371725000118\n",
+            "  Estimated Annual Production for rC4_diff: 66500.48300000007\n",
             "Year 2022:\n",
             "  Estimated Annual Production for FFC55555_diff: 10.30000000000001\n",
             "  Estimated Annual Production for Butanol_diff: -1301.8312923499968\n",
-            "  Estimated Annual Production for Decanol_diff: -67.45813060000017\n"
+            "  Estimated Annual Production for Decanol_diff: -67.45813060000017\n",
+            "  Estimated Annual Production for rC4_diff: 369021.23450000037\n"
           ]
         }
       ],
@@ -354,12 +367,15 @@
         "    estimated_annual_production_FFC55555_1_75 = average_daily_totals_1_75['FFC55555_diff'] * actual_days_with_data_1_75\n",
         "    estimated_annual_production_butanol_1_75 = average_daily_totals_1_75['Butanol_diff'] * actual_days_with_data_1_75\n",
         "    estimated_annual_production_decanol_1_75 = average_daily_totals_1_75['Decanol_diff'] * actual_days_with_data_1_75\n",
+        "\n",
+        "    estimated_annual_production_rC4_1_75 = average_daily_totals_1_75['rC4_diff'] * actual_days_with_data_1_75\n",
         "    \n",
         "    # Store results in dictionary\n",
         "    annual_production_1_75[year] = {\n",
         "        'FFC55555_diff': estimated_annual_production_FFC55555_1_75,\n",
         "        'Butanol_diff': estimated_annual_production_butanol_1_75,\n",
-        "        'Decanol_diff': estimated_annual_production_decanol_1_75\n",
+        "        'Decanol_diff': estimated_annual_production_decanol_1_75,\n",
+        "        'rC4_diff': estimated_annual_production_rC4_1_75\n",
         "    }\n",
         "\n",
         "# Output the results\n",
@@ -367,7 +383,8 @@
         "    print(f\"Year {year}:\")\n",
         "    print(f\"  Estimated Annual Production for FFC55555_diff: {annual_production_1_75[year]['FFC55555_diff']}\")\n",
         "    print(f\"  Estimated Annual Production for Butanol_diff: {annual_production_1_75[year]['Butanol_diff']}\")\n",
-        "    print(f\"  Estimated Annual Production for Decanol_diff: {annual_production_1_75[year]['Decanol_diff']}\")\n"
+        "    print(f\"  Estimated Annual Production for Decanol_diff: {annual_production_1_75[year]['Decanol_diff']}\")\n",
+        "    print(f\"  Estimated Annual Production for rC4_diff: {annual_production_1_75[year]['rC4_diff']}\")\n"
       ]
     },
     {
@@ -379,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 19,
       "metadata": {
         "metadata": {}
       },
@@ -393,7 +410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 20,
       "metadata": {
         "metadata": {}
       },
@@ -405,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 21,
       "metadata": {
         "metadata": {}
       },
@@ -420,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 22,
       "metadata": {
         "metadata": {}
       },
@@ -489,6 +506,64 @@
         "    print(f\"Year {year}:\")\n",
         "    print(f\"  Estimated Annual Production for Butanol_diff: {annual_production[year]['Butanol_diff']}\")\n",
         "    print(f\"  Estimated Annual Production for Decanol_diff: {annual_production[year]['Decanol_diff']}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {
+        "metadata": {}
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "count    47882.000000\n",
+            "mean         0.772318\n",
+            "std          0.022360\n",
+            "min          0.698384\n",
+            "25%          0.759411\n",
+            "50%          0.774547\n",
+            "75%          0.788748\n",
+            "max          0.851052\n",
+            "Name: FFC55555, dtype: float64\n",
+            "count    47882.000000\n",
+            "mean         0.772318\n",
+            "std          0.022360\n",
+            "min          0.698384\n",
+            "25%          0.759411\n",
+            "50%          0.774547\n",
+            "75%          0.788748\n",
+            "max          0.851052\n",
+            "Name: FFC55555, dtype: float64\n",
+            "count    47882.000000\n",
+            "mean         0.770974\n",
+            "std          0.022239\n",
+            "min          0.698384\n",
+            "25%          0.756502\n",
+            "50%          0.770412\n",
+            "75%          0.784928\n",
+            "max          0.851052\n",
+            "Name: FFC55555_adj, dtype: float64\n",
+            "count    47882.000000\n",
+            "mean         0.754295\n",
+            "std          0.013132\n",
+            "min          0.698384\n",
+            "25%          0.750159\n",
+            "50%          0.751833\n",
+            "75%          0.759608\n",
+            "max          0.851047\n",
+            "Name: FFC55555_adj, dtype: float64\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(df_rC4_1_75['FFC55555'].describe())\n",
+        "print(df_rC4_5_75['FFC55555'].describe())\n",
+        "\n",
+        "print(df_rC4_1_75['FFC55555_adj'].describe())\n",
+        "print(df_rC4_5_75['FFC55555_adj'].describe())"
       ]
     }
   ],
