may the fourth be with you

--- a/IV Optimize/Merge Data/1.1.1 IM - Create Dataset .ipynb
+++ b/IV Optimize/Merge Data/1.1.1 IM - Create Dataset .ipynb
@@ -2,12 +2,27 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 2,
       "metadata": {
         "tags": [],
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_13304\\1304120184.py:1: DeprecationWarning: \n",
+            "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+            "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+            "but was not found to be installed on your system.\n",
+            "If this would cause problems for you,\n",
+            "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+            "        \n",
+            "  import pandas as pd\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "# Set max columns to display\n",
@@ -25,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 3,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -41,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -54,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 5,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -132,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -153,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -164,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -185,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -211,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -232,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -260,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -279,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -324,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -346,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -372,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -417,6 +432,122 @@
         "\n",
         "# Inspect the final_dataset\n",
         "print(final_dataset.head())  # Print the first few rows to inspect the dataset\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "                                Date    425_pct_Al    C4_pct_Eth  \\\n",
+            "count                          47882  47882.000000  47882.000000   \n",
+            "mean   2016-07-11 20:12:00.195480576      6.145878      1.234033   \n",
+            "min              2012-05-16 16:00:00      5.171905      0.086948   \n",
+            "25%              2014-08-01 08:30:00      6.005205      0.631261   \n",
+            "50%              2016-08-05 12:30:00      6.139890      1.119195   \n",
+            "75%              2018-05-25 22:45:00      6.286790      1.698079   \n",
+            "max              2022-03-24 13:00:00      7.134450      9.466675   \n",
+            "std                              NaN      0.257346      0.720766   \n",
+            "\n",
+            "         C4_pct_H2O  HydWtr_pct_Ammonia   HydWtr_Na2O       Butanol  \\\n",
+            "count  47882.000000        47882.000000  47882.000000  47882.000000   \n",
+            "mean      21.182765            0.968711      0.812908      9.835905   \n",
+            "min        8.149630            0.389479      0.002854      0.361524   \n",
+            "25%       18.836025            0.877101      0.457260      3.894687   \n",
+            "50%       21.446875            0.940564      0.666516      5.972084   \n",
+            "75%       23.306850            1.031051      0.985382     11.264956   \n",
+            "max       34.572900            1.603285     12.888450     56.550000   \n",
+            "std        2.741406            0.148502      0.701055      9.743974   \n",
+            "\n",
+            "            Decanol       DI55102       DI55152       FC55003       FC55009  \\\n",
+            "count  47882.000000  47882.000000  47882.000000  47882.000000  47882.000000   \n",
+            "mean       3.061965      0.944754      0.933222   5997.067359    849.324028   \n",
+            "min        0.087500      0.800581      0.837907   3086.266250      0.000000   \n",
+            "25%        1.870511      0.911022      0.913341   5535.893437    318.575073   \n",
+            "50%        2.970853      0.950321      0.932996   6015.119375    835.224750   \n",
+            "75%        4.082813      0.984635      0.952395   6516.350625   1331.073437   \n",
+            "max        7.942500      1.059549      1.024214   8740.065000   2627.221250   \n",
+            "std        1.523367      0.052565      0.029663    764.660665    594.607855   \n",
+            "\n",
+            "            FC55552       FC55569       FC55576      FFC55555       LC55557  \\\n",
+            "count  47882.000000  47882.000000  47882.000000  47882.000000  47882.000000   \n",
+            "mean   36158.020318   6608.758425    367.355995      0.772318     69.421269   \n",
+            "min    18318.325000   5167.393750      0.000000      0.698384     60.807113   \n",
+            "25%    34984.462500   6382.025312    181.539969      0.759411     66.936891   \n",
+            "50%    37964.425000   6584.314375    335.615250      0.774547     70.049750   \n",
+            "75%    39003.525000   6813.140000    540.378344      0.788748     71.767922   \n",
+            "max    41922.012500   8075.575000   1057.340000      0.851052     76.225175   \n",
+            "std     4445.488341    376.688841    252.407487      0.022360      2.791151   \n",
+            "\n",
+            "            LC90366       LC90368       PI55004       PI55020       TC55552  \\\n",
+            "count  47882.000000  47882.000000  47882.000000  47882.000000  47882.000000   \n",
+            "mean      46.374042     36.708045      2.153351     -1.479528    168.854034   \n",
+            "min        0.000000      0.118033      0.072451     -4.676100    121.008625   \n",
+            "25%       21.298322     20.935316      1.261219     -2.349159    155.628687   \n",
+            "50%       47.781681     41.751925      1.869022     -1.490140    172.732000   \n",
+            "75%       77.033475     51.666197      2.901685     -0.461214    180.929875   \n",
+            "max       87.901600     81.166888      6.131297      1.486826    199.818125   \n",
+            "std       29.004384     19.874079      1.141848      1.104073     15.225005   \n",
+            "\n",
+            "            TI55021  \n",
+            "count  47882.000000  \n",
+            "mean     223.029157  \n",
+            "min      210.532500  \n",
+            "25%      217.553906  \n",
+            "50%      220.225188  \n",
+            "75%      223.712437  \n",
+            "max      257.890750  \n",
+            "std        9.476781  \n"
+          ]
+        }
+      ],
+      "source": [
+        "# Inspect the final_dataset\n",
+        "print(final_dataset.describe())  # Print the first few rows to inspect the dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Year\n",
+            "2012    2445\n",
+            "2013    6471\n",
+            "2014    5952\n",
+            "2015    5807\n",
+            "2016    6222\n",
+            "2017    6348\n",
+            "2018    6128\n",
+            "2019    4920\n",
+            "2020    3178\n",
+            "2022     411\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Assuming the 'Date' column is a string, you can extract the year using the str accessor\n",
+        "# final_dataset['Year'] = final_dataset['Date'].str[:4]\n",
+        "\n",
+        "# Alternatively, if the 'Date' column is already a datetime object, you can extract the year directly\n",
+        "final_dataset['Year'] = final_dataset['Date'].dt.year\n",
+        "\n",
+        "# Now count the records for each year\n",
+        "record_counts_by_year = final_dataset['Year'].value_counts().sort_index()\n",
+        "\n",
+        "# Output the results\n",
+        "print(record_counts_by_year)\n"
       ]
     },
     {
