--- a/IV Optimize/Statistical Testing Sets/C4 Difference.ipynb
+++ b/IV Optimize/Statistical Testing Sets/C4 Difference.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 14,
       "metadata": {
         "metadata": {}
       },
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 15,
       "metadata": {
         "metadata": {},
         "tags": [],
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 16,
       "metadata": {
         "metadata": {}
       },
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 17,
       "metadata": {
         "metadata": {}
       },
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 18,
       "metadata": {
         "metadata": {}
       },
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 19,
       "metadata": {
         "metadata": {}
       },
@@ -261,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 20,
       "metadata": {
         "metadata": {}
       },
@@ -274,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 21,
       "metadata": {
         "metadata": {}
       },
@@ -289,7 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 22,
       "metadata": {
         "metadata": {}
       },
@@ -396,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 23,
       "metadata": {
         "metadata": {}
       },
@@ -405,80 +405,169 @@
         "# Calculate the differences and create new columns\n",
         "df_rC4_5_75['FFC55555_diff'] = df_rC4_5_75['FFC55555'] - df_rC4_5_75['FFC55555_adj']\n",
         "df_rC4_5_75['Butanol_diff'] = df_rC4_5_75['Butanol'] - df_rC4_5_75['Butanol_adj']\n",
-        "df_rC4_5_75['Decanol_diff'] = df_rC4_5_75['Decanol'] - df_rC4_5_75['Decanol_adj']"
+        "df_rC4_5_75['Decanol_diff'] = df_rC4_5_75['Decanol'] - df_rC4_5_75['Decanol_adj']\n",
+        "\n",
+        "df_rC4_5_75['rC4_diff'] = (df_rC4_5_75['FFC55555']*df_rC4_5_75['FC55552'])-(df_rC4_5_75['FFC55555_adj']*df_rC4_5_75['FC55552'])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 24,
       "metadata": {
         "metadata": {}
       },
       "outputs": [],
       "source": [
         "df_rC4_5_75['Date'] = pd.to_datetime(df_rC4_5_75['Date'])\n",
-        "df_rC4_5_75.set_index('Date', inplace=True)"
+        "df_rC4_5_75.set_index('Date', inplace=True)\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 25,
       "metadata": {
         "metadata": {}
       },
       "outputs": [],
       "source": [
         "# Sum up the hourly data to get daily totals for each component\n",
-        "daily_totals = df_rC4_5_75[['Butanol_diff', 'Decanol_diff']].resample('D').sum()\n",
+        "daily_totals = df_rC4_5_75[['FFC55555_diff','Butanol_diff', 'Decanol_diff', 'rC4_diff']].resample('D').sum()\n",
         "\n",
         "# Group by year and sum up daily data for each year\n",
-        "daily_totals_by_year = df_rC4_5_75[['Butanol_diff', 'Decanol_diff']].groupby(df_rC4_5_75.index.year).resample('D').sum()\n"
+        "daily_totals_by_year_5_75 = df_rC4_5_75[['FFC55555_diff','Butanol_diff', 'Decanol_diff', 'rC4_diff']].groupby(df_rC4_5_75.index.year).resample('D').sum()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
-      "metadata": {
-        "metadata": {}
-      },
+      "execution_count": 26,
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
             "Year 2012:\n",
+            "  Estimated Annual Production for FFC55555_diff: 68.38000000000012\n",
             "  Estimated Annual Production for Butanol_diff: -3498.0317270333326\n",
             "  Estimated Annual Production for Decanol_diff: -152.43169980999917\n",
+            "  Estimated Annual Production for rC4_diff: 2380522.0060000024\n",
             "Year 2013:\n",
+            "  Estimated Annual Production for FFC55555_diff: 132.17000000000016\n",
             "  Estimated Annual Production for Butanol_diff: -3723.1329483000004\n",
             "  Estimated Annual Production for Decanol_diff: 43.63221600000063\n",
+            "  Estimated Annual Production for rC4_diff: 4745483.903250002\n",
             "Year 2014:\n",
+            "  Estimated Annual Production for FFC55555_diff: 143.3200000000002\n",
             "  Estimated Annual Production for Butanol_diff: -8778.798418299997\n",
             "  Estimated Annual Production for Decanol_diff: 58.367250789000195\n",
+            "  Estimated Annual Production for rC4_diff: 5372815.018000004\n",
             "Year 2015:\n",
+            "  Estimated Annual Production for FFC55555_diff: 130.87000000000023\n",
             "  Estimated Annual Production for Butanol_diff: -8454.699985400028\n",
             "  Estimated Annual Production for Decanol_diff: -273.7606339950016\n",
+            "  Estimated Annual Production for rC4_diff: 4849572.757875008\n",
             "Year 2016:\n",
+            "  Estimated Annual Production for FFC55555_diff: 129.06000000000012\n",
             "  Estimated Annual Production for Butanol_diff: -10143.55029800001\n",
             "  Estimated Annual Production for Decanol_diff: -253.47513181000306\n",
+            "  Estimated Annual Production for rC4_diff: 4535407.487625007\n",
             "Year 2017:\n",
+            "  Estimated Annual Production for FFC55555_diff: 154.34000000000015\n",
             "  Estimated Annual Production for Butanol_diff: -8551.43747360001\n",
             "  Estimated Annual Production for Decanol_diff: -558.5149017300023\n",
+            "  Estimated Annual Production for rC4_diff: 5582820.738875001\n",
             "Year 2018:\n",
+            "  Estimated Annual Production for FFC55555_diff: 16.150000000000016\n",
             "  Estimated Annual Production for Butanol_diff: -1841.4962096000063\n",
             "  Estimated Annual Production for Decanol_diff: -264.896271830002\n",
+            "  Estimated Annual Production for rC4_diff: 548295.2230000003\n",
             "Year 2019:\n",
+            "  Estimated Annual Production for FFC55555_diff: 25.530000000000033\n",
             "  Estimated Annual Production for Butanol_diff: -3792.786291949982\n",
             "  Estimated Annual Production for Decanol_diff: -259.96728177000335\n",
+            "  Estimated Annual Production for rC4_diff: 937712.7545000006\n",
             "Year 2020:\n",
+            "  Estimated Annual Production for FFC55555_diff: 50.12000000000005\n",
             "  Estimated Annual Production for Butanol_diff: -6573.667089399978\n",
             "  Estimated Annual Production for Decanol_diff: -177.28357680000107\n",
+            "  Estimated Annual Production for rC4_diff: 1800929.0018750017\n",
             "Year 2022:\n",
+            "  Estimated Annual Production for FFC55555_diff: 13.02000000000001\n",
             "  Estimated Annual Production for Butanol_diff: -1492.7627568499963\n",
-            "  Estimated Annual Production for Decanol_diff: -71.8347400000002\n"
+            "  Estimated Annual Production for Decanol_diff: -71.8347400000002\n",
+            "  Estimated Annual Production for rC4_diff: 469506.92100000044\n"
+          ]
+        },
+        {
+          "ename": "KeyError",
+          "evalue": "'Date'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[26], line 41\u001b[0m\n\u001b[0;32m     33\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  Estimated Annual Production for rC4_diff: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mannual_production_5_75[year][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrC4_diff\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     37\u001b[0m \u001b[38;5;66;03m# Assuming the 'Date' column is a string, you can extract the year using the str accessor\u001b[39;00m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;66;03m# annual_production_5_75['Year'] = annual_production_5_75['Date'].str[:4]\u001b[39;00m\n\u001b[0;32m     39\u001b[0m \n\u001b[0;32m     40\u001b[0m \u001b[38;5;66;03m# Alternatively, if the 'Date' column is already a datetime object, you can extract the year directly\u001b[39;00m\n\u001b[1;32m---> 41\u001b[0m annual_production_5_75[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYear\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mannual_production_5_75\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mDate\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mdt\u001b[38;5;241m.\u001b[39myear\n\u001b[0;32m     43\u001b[0m \u001b[38;5;66;03m# Now count the records for each year\u001b[39;00m\n\u001b[0;32m     44\u001b[0m record_counts_by_year \u001b[38;5;241m=\u001b[39m annual_production_5_75[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYear\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalue_counts()\u001b[38;5;241m.\u001b[39msort_index()\n",
+            "\u001b[1;31mKeyError\u001b[0m: 'Date'"
           ]
         }
       ],
+      "source": [
+        "# Initialize a dictionary to store the annual production values for each year\n",
+        "annual_production_5_75 = {}\n",
+        "\n",
+        "# Loop through each group (each year) in the daily totals\n",
+        "for year, group in daily_totals_by_year_5_75.groupby(level=0):  # level=0 refers to the 'year' group\n",
+        "    # Calculate the average daily totals for the year\n",
+        "    average_daily_totals_5_75 = group.mean()\n",
+        "    \n",
+        "    # Count the actual days with data in that year\n",
+        "    actual_days_with_data_5_75 = group.dropna().shape[0]\n",
+        "    \n",
+        "    # Calculate the estimated annual production based on actual days with data\n",
+        "    estimated_annual_production_FFC55555_5_75 = average_daily_totals_5_75['FFC55555_diff'] * actual_days_with_data_5_75\n",
+        "    estimated_annual_production_butanol_5_75 = average_daily_totals_5_75['Butanol_diff'] * actual_days_with_data_5_75\n",
+        "    estimated_annual_production_decanol_5_75 = average_daily_totals_5_75['Decanol_diff'] * actual_days_with_data_5_75\n",
+        "\n",
+        "    estimated_annual_production_rC4_5_75 = average_daily_totals_5_75['rC4_diff'] * actual_days_with_data_5_75\n",
+        "    \n",
+        "    # Store results in dictionary\n",
+        "    annual_production_5_75[year] = {\n",
+        "        'FFC55555_diff': estimated_annual_production_FFC55555_5_75,\n",
+        "        'Butanol_diff': estimated_annual_production_butanol_5_75,\n",
+        "        'Decanol_diff': estimated_annual_production_decanol_5_75,\n",
+        "        'rC4_diff': estimated_annual_production_rC4_5_75\n",
+        "    }\n",
+        "\n",
+        "# Output the results\n",
+        "for year in annual_production_5_75:\n",
+        "    print(f\"Year {year}:\")\n",
+        "    print(f\"  Estimated Annual Production for FFC55555_diff: {annual_production_5_75[year]['FFC55555_diff']}\")\n",
+        "    print(f\"  Estimated Annual Production for Butanol_diff: {annual_production_5_75[year]['Butanol_diff']}\")\n",
+        "    print(f\"  Estimated Annual Production for Decanol_diff: {annual_production_5_75[year]['Decanol_diff']}\")\n",
+        "    print(f\"  Estimated Annual Production for rC4_diff: {annual_production_5_75[year]['rC4_diff']}\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Assuming the 'Date' column is a string, you can extract the year using the str accessor\n",
+        "# annual_production_5_75['Year'] = annual_production_5_75['Date'].str[:4]\n",
+        "\n",
+        "# Alternatively, if the 'Date' column is already a datetime object, you can extract the year directly\n",
+        "annual_production_5_75['Year'] = annual_production_5_75['Date'].dt.year\n",
+        "\n",
+        "# Now count the records for each year\n",
+        "record_counts_by_year = annual_production_5_75['Year'].value_counts().sort_index()\n",
+        "\n",
+        "# Output the results\n",
+        "print(record_counts_by_year)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "metadata": {}
+      },
+      "outputs": [],
       "source": [
         "# Initialize a dictionary to store the annual production values for each year\n",
         "annual_production = {}\n",
@@ -510,54 +599,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "metadata": {}
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "count    47882.000000\n",
-            "mean         0.772318\n",
-            "std          0.022360\n",
-            "min          0.698384\n",
-            "25%          0.759411\n",
-            "50%          0.774547\n",
-            "75%          0.788748\n",
-            "max          0.851052\n",
-            "Name: FFC55555, dtype: float64\n",
-            "count    47882.000000\n",
-            "mean         0.772318\n",
-            "std          0.022360\n",
-            "min          0.698384\n",
-            "25%          0.759411\n",
-            "50%          0.774547\n",
-            "75%          0.788748\n",
-            "max          0.851052\n",
-            "Name: FFC55555, dtype: float64\n",
-            "count    47882.000000\n",
-            "mean         0.770974\n",
-            "std          0.022239\n",
-            "min          0.698384\n",
-            "25%          0.756502\n",
-            "50%          0.770412\n",
-            "75%          0.784928\n",
-            "max          0.851052\n",
-            "Name: FFC55555_adj, dtype: float64\n",
-            "count    47882.000000\n",
-            "mean         0.754295\n",
-            "std          0.013132\n",
-            "min          0.698384\n",
-            "25%          0.750159\n",
-            "50%          0.751833\n",
-            "75%          0.759608\n",
-            "max          0.851047\n",
-            "Name: FFC55555_adj, dtype: float64\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "print(df_rC4_1_75['FFC55555'].describe())\n",
         "print(df_rC4_5_75['FFC55555'].describe())\n",
